--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,7 +8,7 @@
     <Grid ClipToBounds="False">
        
         <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="20">
-            <TextBlock Text="Spiele die Melodie!" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" />
+            <TextBlock Name="Title" Text="Spiele die Melodie!" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" />
             
         </StackPanel>
 
